# soft-render

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  create_brick_normal_map.py  create_circle_bumps_normal_map.py  create_high_res_sphere.py  create_normal_map.py  create_simple_texture.py  sphere.py
assets/: Untitled.mtl  chair.mtl
examples/: demo.cpp
include/: math.h  model.h  renderer.h  renderer_gpu.h  texture.h  vector_math.h  window.h
src/: clear_gpu.cu  clear_gpu_stub.cpp  gpu_vertex.cu  gpu_vertex_stub.cpp  main.cpp  math.cpp  model.cpp  msaa_resolve.cu  msaa_resolve_stub.cpp  rasterizer_gpu.cu  rasterizer_gpu_stub.cpp  renderer.cpp  renderer_gpu.cpp  renderer_gpu_stub.cpp  ssaa_downsample.cu  ssaa_downsample_stub.cpp  texture.cpp  vector_math.cpp  window.cpp
test/: test.cpp
